booking-chart/templates/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: booking-service

spec:
  type: LoadBalancer

  selector:
    app: booking-app

  ports:
    - port: 8000
      targetPort: 8000
