booking-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: booking-ingress

spec:
  rules:
    - host: booking.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: booking-service

                port:
                  number: 8000
